# Reference_manager

./: .coveragerc  .gitignore  .pylintrc  AppLibrary.py  LICENSE.txt  README.md  app_library.py  client.js  db.py  fly.toml  pyproject.toml  report.md  requirements.txt  retro.md  retro2.md  routes.py  schema.sql  test_file.bib
.github/workflows/: main.yml
entities/: source.py
repositories/: books_repository.py  tags_repository.py  users_repository.py
services/: bibtex_service  bibtex_service.py  source_service.py
src/: app.py  db.py  routes.py
src/entities/: source.py
src/repositories/: books_repository.py
src/services/: source_service.py
src/templates/: add.html  layout.html  list.html
src/tests/: source_service_test.py
src/tests/repositories/: book_repository_test.py
templates/: add.html  bibtex.html  index.html  layout.html  list.html  login.html  register.html  styles.css  tags.html
tests/: bibtex_service2_test.py  bibtex_service_test.py  form_test.py  source_service_test.py
tests/repositories/: book_repository_test.py
tests/robot_tests/: add_source.robot  add_tag.robot  personal_source.robot  resource.robot  user.robot
