[tool.poetry]
name = "lahdehallinta"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.23"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pytest = "^7.4.3"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
